...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/item_no"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemNoEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/item_no"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAlignment="viewEnd" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/scanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/scan"
                app:srcCompat="@drawable/baseline_scanner_black_24dp" />

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/brand"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/brandEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/brand"
                    android:importantForAutofill="no"
...
