<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Michael Erichsen.
  ~
  ~ The program is distributed under the terms of the GNU Affero General Public License v3.0
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <!--        <androidx.appcompat.widget.Toolbar-->
        <!--            android:id="@+id/toolbar"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="?attr/actionBarSize"-->
        <!--            android:background="?attr/colorPrimary"-->
        <!--            app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>